# ArielBot

./: .gitignore  README.md  pyproject.toml
arielbot/: __init__.py  bot.py
arielbot/plugins/Core/: ariel_cmd.py
tests/: __init__.py
